<resources>
    <string name="app_name">Intermediate Submission Awal</string>

    <string name="gallery">Galeri</string>
    <string name="image">Gambar</string>
    <string name="description">Deskripsi</string>
    <string name="save">Simpan</string>

    <string name="title_login_page">Siap untuk berbagi pengalaman?</string>
    <string name="message_login_page">Yuk, masuk untuk memulai!</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="dont_have_account">Belum Punya Akun? Daftar!</string>
    <string name="login">Masuk</string>
    <string name="title_welcome_page">Selamat datang di Story App!</string>
    <string name="title_signup_page">Silahkan lengkapi data dirimu di bawah ini!</string>
    <string name="signup">Daftar</string>
    <string name="logout">Keluar</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="detail_story">Detail Cerita</string>
    <string name="created_date">Tanggal Dibuat</string>
    <string name="maps">Maps</string>

    <string name="have_Account">Sudah Punya Akun? Masuk!</string>
    <string name="info_success">Sukses!</string>
    <string name="info">Ups!</string>
    <string name="label_invalid_email">Format Email tidak valid</string>
    <string name="user_not_found">Email atau password salah</string>
    <string name="input_name">Masukan Nama</string>
    <string name="error_password_too_short">Password tidak boleh kurang dari 8 karakter</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="validate_register_success">Akun berhasil dibuat!</string>
    <string name="email_registered">Email sudah terdaftar!</string>
    <string name="input_email">Masukkan Email</string>
    <string name="input_password">Masukkan Password</string>
    <string name="description_mandatory">Deskripsi harus diisi!</string>
    <string name="image_mandatory">Masukkan gambar terlebih dahulu!</string>
    <string name="choose_picture">Pilih Gambar</string>
    <string name="add_story_failed">Gagal menambah cerita</string>
    <string name="retry">Coba lagi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>